--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.0",
+    "react-select": "^5.2.1",
     "react-signature-canvas": "^1.0.3",
-    "react-signature-pad": "^0.0.6"
+    "react-signature-pad": "^0.0.6",
+    "react-toastify": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
