--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notify-toast": "^0.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
