--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "jquery": "^3.6.0",
+    "mdb-react-ui-kit": "^2.2.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notify-toast": "^0.5.1",
