--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "jquery": "^3.6.0",
-    "mdb-react-ui-kit": "^2.2.0",
-    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notify-toast": "^0.5.1",
+    "react-pdf": "^5.6.0",
+    "react-router": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
